--- a/action.yml
+++ b/action.yml
@@ -1,24 +1,37 @@
 name: 'Post-Check'
 description: 'Post Step After Check, eg. comment, add reviewers'
 inputs:
-  comment-file:
-    description: 'comment file path'
+  testtype:
+    description: 'test type'
     required: true
-    default: ''
-  reviewers:
-    description: 'reviewers'
+    default: 'staticCheck'
+  status:
+    description: 'status of check result'
     required: true
-    default: ''
+    default: '是'
+  result:
+    description: 'result'
+    required: true
+    default: '0'
+
 
 runs:
   using: "composite"
   steps:
-    - name: Comment PR
-      uses: thollander/actions-comment-pull-request@v2
+    - uses: actions/checkout@v4
       with:
-        filePath: ${{ inputs.comment-file }}
-    - name: Add Reviewers to PR
-      uses: ryaugusta/pr-add-reviewers-action@v1
-      with:
-        token: ${{ github.token }}
-        reviewers: ${{ inputs.reviewers }}
+        repository: kuchune/check-tools
+        sparse-checkout: |
+          common/sendData.py
+        sparse-checkout-cone-mode: false
+    - run: |
+        python3 common/sendData.py
+      env:
+        PROJECT: "${{github.repository}}"
+        NUMBER: "${{github.event.pull_request.number}}"
+        REVISION: "${{github.event.pull_request.head.sha}}"
+        RUNID: "${{github.run_id}}"
+        JOBSTATUS: "${{job.status}}"
+        TESTTYPE: ${{ inputs.testtype }}
+        STATUS: ${{ inputs.status }}
+        RESULT: ${{ inputs.result }}
